@@ -1,3 +1,13 @@
+2009-11-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-shell-prompt-pattern): Use \r for carriage
+	return.
+	(tramp-handle-make-symbolic-link)
+	(tramp-handle-dired-compress-file, tramp-handle-expand-file-name):
+	Quote file names.
+	(tramp-send-command-and-check): New argument DONT-SUPPRESS-ERR.
+	(tramp-handle-process-file): Use it.
+
 2009-11-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Set
